test/trivial/bradc/uintloop.good
uintloop.chpl:3: error: Invalid arithmetic sequence, bounds and stride must be integers
